--- a/config/database.yml
+++ b/config/database.yml
@@ -23,8 +23,8 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: 
 
 production:
   <<: *default
-  database: db/production.sqlite3
+  database: 
